fixed kappa vs MJ in terms of momentum and gamma, but v is still not quite right

--- a/kappa_vs_MJ.ipynb
+++ b/kappa_vs_MJ.ipynb
@@ -114,7 +114,7 @@
        ]
       }
      ],
-     "prompt_number": 19
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -249,43 +249,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 3
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
      "input": [
-      "#m_e = mass of electron CGS\n",
-      "#c = speed of light CGS\n",
-      "#m_e = 0.5\n",
-      "#c = 1\n",
-      "kappa = 150\n",
-      "theta = 10\n",
-      "m_e = 9.1093826e-28\n",
-      "c = 2.99792458e10 \n",
-      "\n",
-      "def kappa_gamma_unnormalized(gamma, theta, kappa):\n",
-      "    f = (1. + (np.sqrt(1. + m_e**2. * c**2. * (gamma**2. - 1.)) - 1.)/(kappa * theta))**(-kappa - 1.)\n",
-      "    return f\n",
-      "\n",
-      "\n",
-      "def normalize_kappa_gamma(gamma):\n",
-      "    f = 4. * np.pi * (m_e**2. * c**2. * (gamma**2. - 1)) * kappa_gamma_unnormalized(gamma, theta, 150)\n",
-      "    return f\n",
-      "\n",
-      "kappa_gamma_norm = quad(normalize_kappa_gamma, 0, np.inf)\n",
-      "\n",
-      "k_g_norm = 1./kappa_gamma_norm[0]\n",
-      "\n",
-      "print k_g_norm "
+      "    "
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "3.88290767608e+23\n"
-       ]
-      }
-     ],
-     "prompt_number": 47
+     "outputs": [],
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
