my_besselJ seems to be working

--- a/my_besselJ.ipynb
+++ b/my_besselJ.ipynb
@@ -38,6 +38,8 @@
       "INTERCEPT3 = (2.720161927383055733e-01)\n",
       "N_JN = 30.\n",
       "DBL_MIN = 2.2250738585072014e-308\n",
+      "#DBL_MIN = 0.05\n",
+      "\n",
       "\n",
       "def BesselJ_Debye_Eps_Exp(n, x):\n",
       "    first_time = 1\n",
@@ -193,9 +195,9 @@
       "        return BesselJ_Debye_Eps_Exp( n , x )\n",
       "\n",
       "\n",
-      "\n",
-      "\n",
-      "print BesselJ_Debye_Eps_Exp(5, 10)"
+      "n = 100000.\n",
+      "x = 150000.\n",
+      "print my_Bessel_J(n, x)\n"
      ],
      "language": "python",
      "metadata": {},
@@ -204,17 +206,17 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "-0.234138848154\n"
+        "0.00205350941105\n"
        ]
       }
      ],
-     "prompt_number": 20
+     "prompt_number": 68
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "print special.jv(35, 10)"
+      "print special.jv(100000, 150000)"
      ],
      "language": "python",
      "metadata": {},
@@ -223,30 +225,29 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "1.39708384543e-16\n"
+        "0.00205350941106\n"
        ]
       }
      ],
-     "prompt_number": 18
+     "prompt_number": 69
     },
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [
-      "M = 5\n"
-     ],
+     "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "0.0005\n"
-       ]
-      }
-     ],
-     "prompt_number": 74
+     "outputs": [],
+     "prompt_number": 59
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 59
     },
     {
      "cell_type": "code",
