--- a/my_besselJ.ipynb
+++ b/my_besselJ.ipynb
@@ -21,7 +21,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 22
     },
     {
      "cell_type": "code",
@@ -68,27 +68,27 @@
       "    t3 = z * z\n",
       "    t4 =  x * z     \n",
       "    t10 = t4 *  t4\n",
-      "    t38 = 810485676000000 * At[4] * t3\n",
+      "    t38 = 810485676000000. * At[4] * t3\n",
       "    t44 = x\n",
       "    t70 = At[7] * t3\n",
       "    t93 = At[10] * t3\n",
       "    t107 = At[13] * t3\n",
       "    t114 =  ez * ez\n",
       "    t146 = t10 * t10\n",
-      "    t149 = ((-5403237840000 * At[6] + (69470200800000 * At[4] + 19451656224000000 * At[0] * t4) * t3) * t10 * z + (-401283384 * At[15] + (4707059994 * At[13] + (3012121710 * At[12] + (-36011689560 * At[10] + (8027667648000 * At[9] + (-8027667648000 * At[7] + (-1296777081600000 * At[3] + 19451656224000000 * At[1] * t3) * t4) * t3) * z) * t3) * z) * t3 + ((-41423013450 * At[12] + (484040056500 * At[10] + (67540473000000 * At[6] - t38) * t4) * t3) * t44 + (1748257220 * At[15] + (-19964735910 * At[13] + (-2594411820000 * At[9] + (29331862560000 * At[7] + 3241942704000000 * At[3] * t4) * t3) * t4) * t3 + ((78248884350 * At[12] + (-860873013000 * At[10] + (-94556662200000 * At[6] + t38) * t4) * t3) * t44 + (-1938419560 * At[15] + (20997160275 * At[13] + (2283511230000 * At[9] - 21612951360000 * t70) * t4) * t3 + ((-47153256150 * At[12] + (459918459000 * At[10] + 27016189200000 * At[6] * t4) * t3) * t44 + (849093050 * At[15] + (-8397889500 * At[13] + (-643242600000 * At[9] + 3859455600000 * t70) * t4) * t3 + ((11448186750 * At[12] - 88445857500 * t93) * t44 + (-173573400 * At[15] + (1474097625 * At[13] + 53603550000 * At[9] * t4) * t3 + ((-1161410250 * At[12] + 5360355000 * t93) * t44 + (-113704500 * t107 + 17481100 * At[15] + (40608750 * At[12] * t44 + (-833000 * At[15] + 3123750 * t107 + 14875 * At[15] * t114) * ez) * ez) * ez) * ez) * ez) * ez) * ez) * ez) * ez) * ez) * ez) * ez) * ez) / ( C_pi * t146 * 0.58354968672000000e17 )\n",
+      "    t149 = ((-5403237840000. * At[6] + (69470200800000. * At[4] + 19451656224000000. * At[0] * t4) * t3) * t10 * z + (-401283384. * At[15] + (4707059994. * At[13] + (3012121710. * At[12] + (-36011689560. * At[10] + (8027667648000. * At[9] + (-8027667648000. * At[7] + (-1296777081600000. * At[3] + 19451656224000000. * At[1] * t3) * t4) * t3) * z) * t3) * z) * t3 + ((-41423013450. * At[12] + (484040056500. * At[10] + (67540473000000. * At[6] - t38) * t4) * t3) * t44 + (1748257220. * At[15] + (-19964735910. * At[13] + (-2594411820000. * At[9] + (29331862560000. * At[7] + 3241942704000000. * At[3] * t4) * t3) * t4) * t3 + ((78248884350. * At[12] + (-860873013000. * At[10] + (-94556662200000. * At[6] + t38) * t4) * t3) * t44 + (-1938419560. * At[15] + (20997160275. * At[13] + (2283511230000. * At[9] - 21612951360000. * t70) * t4) * t3 + ((-47153256150. * At[12] + (459918459000. * At[10] + 27016189200000. * At[6] * t4) * t3) * t44 + (849093050. * At[15] + (-8397889500. * At[13] + (-643242600000. * At[9] + 3859455600000. * t70) * t4) * t3 + ((11448186750. * At[12] - 88445857500. * t93) * t44 + (-173573400. * At[15] + (1474097625. * At[13] + 53603550000. * At[9] * t4) * t3 + ((-1161410250. * At[12] + 5360355000. * t93) * t44 + (-113704500. * t107 + 17481100. * At[15] + (40608750. * At[12] * t44 + (-833000. * At[15] + 3123750. * t107 + 14875. * At[15] * t114) * ez) * ez) * ez) * ez) * ez) * ez) * ez) * ez) * ez) * ez) * ez) * ez) * ez) / ( C_pi * t146 * 0.58354968672000000e17 )\n",
       "    return t149\n",
       "    \n",
       "def BesselJ_Meissel_First(n, x):\n",
       "    fn =  n  \n",
       "    z = x/fn\n",
       "    eps = (fn-x)/fn\n",
-      "    Z = np.sqrt(eps*(1+z))\n",
+      "    Z = np.sqrt(eps * (1.+z))\n",
       "    ninv = 1./fn\n",
       "    U = 1./(n*Z*Z*Z)\n",
       "    t1 = z * z\n",
       "    t2 =  ninv * ninv\n",
       "    \n",
-      "    Vsum1  = (U * (860160 + 1290240 * t1 + ((-2580480 - 645120 * t1) * t1 + (-28672 + (2709504 + (6547968 + 672000 * t1) * t1) * t1 + ((-2580480 + (-23224320 + (-18708480 - 1048320 * t1) * t1) * t1) * t1 + (-8192 + (-2519040 + (-60518400 + (-151828480 + (-61254720 - 2163168 * t1) * t1) * t1) * t1) * t1 + ((2580480 + (138700800 + (800163840 + (940423680 + (228049920 + 5537280 * t1) * t1) * t1) * t1) * t1) * t1 + (6144 + (-2644992 + (-299351808 + (-3405435264 + (-8653594320 + (-5897669400 + (-954875250 - 16907985 * t1) * t1) * t1) * t1) * t1) * t1) * t1 + (2580480 + (625766400 + (12841758720 + (60631119360 + (86387857920 + (38435160960 + (4450158720 + 59968440 * t1) * t1) * t1) * t1) * t1) * t1) * t1) * t1 * U) * U) * U) * U) * U) * U) * U)) / 0.10321920e8\n",
+      "    Vsum1  = (U * (860160. + 1290240. * t1 + ((-2580480. - 645120. * t1) * t1 + (-28672. + (2709504. + (6547968. + 672000. * t1) * t1) * t1 + ((-2580480. + (-23224320. + (-18708480. - 1048320. * t1) * t1) * t1) * t1 + (-8192. + (-2519040. + (-60518400. + (-151828480. + (-61254720. - 2163168. * t1) * t1) * t1) * t1) * t1 + ((2580480. + (138700800. + (800163840. + (940423680. + (228049920. + 5537280. * t1) * t1) * t1) * t1) * t1) * t1 + (6144. + (-2644992. + (-299351808. + (-3405435264. + (-8653594320. + (-5897669400. + (-954875250. - 16907985. * t1) * t1) * t1) * t1) * t1) * t1) * t1 + (2580480. + (625766400. + (12841758720. + (60631119360. + (86387857920. + (38435160960. + (4450158720. + 59968440. * t1) * t1) * t1) * t1) * t1) * t1) * t1) * t1 * U) * U) * U) * U) * U) * U) * U)) / 0.10321920e8\n",
       "    \n",
       "    Vsum2 = -(ninv * (420 + (-14 + (-4 + 3 * t2) * t2) * t2)) / 0.5040e4\n",
       "    \n",
@@ -115,18 +115,18 @@
       "    fn = n\n",
       "    z = x/fn\n",
       "    eps = (x-fn)/fn\n",
-      "    Z = np.sqrt(eps*(1+z))\n",
+      "    Z = np.sqrt(eps * (1. + z))\n",
       "    U = 1./(n*Z*Z*Z)\n",
       "    t1 = z * z\n",
       "    t2 = U * U\n",
       "    \n",
-      "    exp_val = (t1 * t2 * (-3072 - 768 * t1 + (3072 + (27648 + (22272 + 1248 * t1) * t1) * t1 + (-3072 + (-165120 + (-952576 + (-1119552 + (-271488 - 6592 * t1) * t1) * t1) * t1) * t1 + (3072 + (744960 + (15287808 + (72179904 + (102842688 + (45756144 + (5297808 + 71391 * t1) * t1) * t1) * t1) * t1) * t1) * t1) * t2) * t2) * t2)) / 0.12288e5\n",
+      "    exp_val = (t1 * t2 * (-3072. - 768. * t1 + (3072. + (27648. + (22272. + 1248. * t1) * t1) * t1 + (-3072. + (-165120. + (-952576. + (-1119552. + (-271488. - 6592. * t1) * t1) * t1) * t1) * t1 + (3072. + (744960. + (15287808. + (72179904. + (102842688. + (45756144. + (5297808. + 71391. * t1) * t1) * t1) * t1) * t1) * t1) * t1) * t2) * t2) * t2)) / 0.12288e5\n",
       "    \n",
       "    Qt = n * ( Z - np.arccos(fn/x) )\n",
       "    \n",
-      "    Qsum = -(U * (860160 + 1290240 * t1 + (28672 + (-2709504 + (-6547968 - 672000 * t1) * t1) * t1 + (8192 + (2519040 + (60518400 + (151828480 + (61254720 + 2163168 * t1) * t1) * t1) * t1) * t1 + (-6144 + (2644992 + (299351808 + (3405435264 + (8653594320 + (5897669400 + (954875250 + 16907985 * t1) * t1) * t1) * t1) * t1) * t1) * t1) * t2) * t2) * t2)) / 0.10321920e8\n",
+      "    Qsum = -(U * (860160. + 1290240. * t1 + (28672. + (-2709504. + (-6547968. - 672000. * t1) * t1) * t1 + (8192. + (2519040. + (60518400. + (151828480. + (61254720. + 2163168. * t1) * t1) * t1) * t1) * t1 + (-6144. + (2644992. + (299351808. + (3405435264. + (8653594320. + (5897669400. + (954875250. + 16907985. * t1) * t1) * t1) * t1) * t1) * t1) * t1) * t2) * t2) * t2)) / 0.10321920e8\n",
       "    \n",
-      "    factor = np.sqrt( 2 / ( C_pi*n*Z ) ) * np.cos( Qsum + Qt - 0.25*C_pi )\n",
+      "    factor = np.sqrt( 2. / ( C_pi*n*Z ) ) * np.cos( Qsum + Qt - 0.25*C_pi )\n",
       "    \n",
       "    retval = exp_factor( factor, exp_val )\n",
       "    \n",
@@ -145,7 +145,7 @@
       "    if(f_factor == 0.):\n",
       "        return 0.\n",
       "    \n",
-      "    fabs_exp = abs(f_exp)\n",
+      "    fabs_exp = np.abs(f_exp)\n",
       "    \n",
       "    if(fabs_exp < 1.e-3):\n",
       "        x = f_exp\n",
@@ -155,7 +155,7 @@
       "            sign_f = -1.\n",
       "        else:\n",
       "            sign_f = 1.\n",
-      "        log_f = np.log(abs(f_factor))\n",
+      "        log_f = np.log(np.abs(f_factor))\n",
       "        if(log_f * f_exp < 0.):\n",
       "            return (sign_f * np.exp(log_f + f_exp))\n",
       "        else:\n",
@@ -163,8 +163,11 @@
       "    else:\n",
       "        return (f_factor * np.exp(f_exp))\n",
       "\n",
-      "#using JNprime_EQ1, as in harmony\n",
+      "#using JNprime_EQ1, as in harmony; I don't think this calculates derivatives \n",
+      "#higher than the first derivative...\n",
       "def my_Bessel_dJ(n, x, jn):\n",
+      "    x = np.float_(x)\n",
+      "    n = np.float_(n)\n",
       "    jn = my_Bessel_J(n, x)\n",
       "    jnp1 = my_Bessel_J((n+1.), x)\n",
       "    if(x == 0.):\n",
@@ -176,6 +179,8 @@
       "    return (n*(jn)/x - jnp1)\n",
       "\n",
       "def my_Bessel_J(n, x):\n",
+      "    x = np.float_(x)\n",
+      "    n = np.float_(n)\n",
       "    if( n < N_JN ): \n",
       "        return special.jv(n,x)\n",
       "    fn = n\n",
@@ -190,46 +195,14 @@
       "    \n",
       "    else:\n",
       "        y = np.log10((x - fn)/x)\n",
-      "        if((x!=fn) and (y > (SLOPE3*logn+INTERCEPT3))):\n",
+      "        if((x != fn) and (y > (SLOPE3*logn+INTERCEPT3))):\n",
       "            return BesselJ_Meissel_Second( n , x )\n",
-      "        return BesselJ_Debye_Eps_Exp( n , x )\n",
-      "\n",
-      "\n",
-      "n = 100000.\n",
-      "x = 150000.\n",
-      "print my_Bessel_J(n, x)\n"
+      "        return BesselJ_Debye_Eps_Exp( n , x )\n"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "0.00205350941105\n"
-       ]
-      }
-     ],
-     "prompt_number": 68
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "print special.jv(100000, 150000)"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "0.00205350941106\n"
-       ]
-      }
-     ],
-     "prompt_number": 69
+     "outputs": [],
+     "prompt_number": 169
     },
     {
      "cell_type": "code",
@@ -238,7 +211,16 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 59
+     "prompt_number": 168
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 85
     },
     {
      "cell_type": "code",
