plotted power law j_nu with high tolerance on scipy's quad integrator found that it made the "spikes" in the error plot more pronounced

--- a/my_besselJ.ipynb
+++ b/my_besselJ.ipynb
@@ -21,7 +21,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 22
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -202,16 +202,30 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 169
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "n = 1e14\n",
+      "x = 2e14\n",
+      "print (special.jv(n, x)) \n",
+      "print (my_Bessel_J(n, x))"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 168
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "2.13960561056e-08\n",
+        "2.14234987141e-08\n"
+       ]
+      }
+     ],
+     "prompt_number": 14
     },
     {
      "cell_type": "code",
