plotted j_nu vs angle for harmony and our calculator; missing factor of 1e-5 in our values

--- a/jnu_calculator_thermal.ipynb
+++ b/jnu_calculator_thermal.ipynb
@@ -49,7 +49,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 27
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -59,17 +59,28 @@
       "#to make the integral doable\n",
       "\n",
       "#constants in natural units\n",
-      "m = 1.\n",
-      "c = 1.\n",
+      "#m = 1.\n",
+      "#c = 1.\n",
+      "#theta_e = 10.\n",
+      "#e = 1\n",
+      "#B = 10\n",
+      "#nu_c = (e * B)/(2 * np.pi * m * c)\n",
+      "\n",
+      "#constants using iharmony's units\n",
+      "m = 9.1093826e-28\n",
+      "c = 2.99792458e10\n",
       "theta_e = 10.\n",
-      "e = 1\n",
-      "B = 10\n",
+      "e = 4.80320680e-10\n",
+      "B = 30.\n",
+      "#n_e = 1.e5\n",
       "nu_c = (e * B)/(2 * np.pi * m * c)\n",
+      "\n",
+      "\n",
       "\n",
       "#variables to be set (frequency, observer angle, width of delta function, electron number density, \n",
       "# sum index n)\n",
-      "nu = 250000. * nu_c\n",
-      "theta = np.pi/3.\n",
+      "nu = 100. * nu_c\n",
+      "theta = 89.999 / 180. * np.pi\n",
       "epsilon = 0.01\n",
       "n_e = 1.\n",
       "nu_s = (2./9.) * nu_c * theta_e**2. * np.sin(theta)\n",
@@ -170,13 +181,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 111,
+       "prompt_number": 33,
        "text": [
-        "2.1225786502853305e-07"
+        "4.1131770055110445e-22"
        ]
       }
      ],
-     "prompt_number": 111
+     "prompt_number": 33
     },
     {
      "cell_type": "code",
