fixed power law plots by changing error tolerance on integrals to match the values given in iharmony

--- a/jnu_calculator_power_law.ipynb
+++ b/jnu_calculator_power_law.ipynb
@@ -15,7 +15,7 @@
       "import numpy as np\n",
       "import pylab as pl\n",
       "import scipy.special as special\n",
-      "from scipy.integrate import nquad\n",
+      "from scipy.integrate import quadrature\n",
       "from scipy.integrate import quad\n",
       "\n",
       "# Set plot parameters to make beautiful plots\n",
@@ -49,7 +49,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 14
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
@@ -93,7 +93,7 @@
       "#eq. 67 gives location of peak for n integration for thermal; in\n",
       "#the n integration we integrate from end of sum (n_max) to C * n_peak_67\n",
       "C = 10\n",
-      "n_peak_power_law = 1.2e8\n",
+      "n_peak_power_law = 1.4e8\n",
       "        \n",
       "def K_s(gamma, n):\n",
       "    beta = np.sqrt(1. - 1./gamma**2.)\n",
@@ -135,14 +135,14 @@
       "    def integrand(gamma):\n",
       "        f = gamma_integrand(gamma, n)\n",
       "        return f\n",
-      "    result = quad(integrand, gamma_minus, gamma_plus, epsrel = 1e-8)[0]\n",
+      "    result = quad(integrand, gamma_minus, gamma_plus, epsabs = 0, epsrel = 1e-08)[0]\n",
       "    return result\n",
       "\n",
       "#integrate over n after evaluating (n_max) terms of sum\n",
       "def n_integration(n_max, n_minus):\n",
       "    if(n_max < n_minus):\n",
       "        n_max = n_minus\n",
-      "    ans = quad(gamma_integration_result, n_max, C * n_peak_power_law, epsrel = 1e-8)[0]\n",
+      "    ans = quad(gamma_integration_result, n_max, C * n_peak_power_law, epsabs = 0, epsrel = 1e-08)[0]\n",
       "    #print ans\n",
       "    return ans\n",
       "\n",
@@ -169,6 +169,23 @@
      "outputs": [
       {
        "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "/usr/lib/python2.7/dist-packages/scipy/integrate/quadpack.py:295: UserWarning: The maximum number of subdivisions (50) has been achieved.\n",
+        "  If increasing the limit yields no improvement it is advised to analyze \n",
+        "  the integrand in order to determine the difficulties.  If the position of a \n",
+        "  local difficulty can be determined (singularity, discontinuity) one will \n",
+        "  probably gain from splitting up the interval and calling the integrator \n",
+        "  on the subranges.  Perhaps a special-purpose integrator should be used.\n",
+        "  warnings.warn(msg)\n",
+        "/usr/lib/python2.7/dist-packages/scipy/integrate/quadpack.py:295: UserWarning: The occurrence of roundoff error is detected, which prevents \n",
+        "  the requested tolerance from being achieved.  The error may be \n",
+        "  underestimated.\n",
+        "  warnings.warn(msg)\n"
+       ]
+      },
+      {
+       "output_type": "stream",
        "stream": "stdout",
        "text": [
         "1000000.0\n"
@@ -177,13 +194,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 25,
+       "prompt_number": 19,
        "text": [
-        "1.182156437359683e-28"
+        "3.02319131125486e-27"
        ]
       }
      ],
-     "prompt_number": 25
+     "prompt_number": 19
     },
     {
      "cell_type": "code",
