--- a/my_besselJ.ipynb
+++ b/my_besselJ.ipynb
@@ -21,7 +21,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -202,30 +202,16 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [
-      "n = 1e14\n",
-      "x = 2e14\n",
-      "print (special.jv(n, x)) \n",
-      "print (my_Bessel_J(n, x))"
-     ],
+     "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "2.13960561056e-08\n",
-        "2.14234987141e-08\n"
-       ]
-      }
-     ],
-     "prompt_number": 14
+     "outputs": [],
+     "prompt_number": 66
     },
     {
      "cell_type": "code",
