worked on adding a cutoff to the power-law and kappa distributions

--- a/jnu_calculator_thermal.ipynb
+++ b/jnu_calculator_thermal.ipynb
@@ -49,7 +49,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -171,23 +171,14 @@
       "    return j_nu\n",
       "    \n",
       "\n",
-      "n_summation(n_max)\n",
+      "#n_summation(n_max)\n",
       "\n",
       "#print gamma_integration_result(10)"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 30,
-       "text": [
-        "0.48015119298280906"
-       ]
-      }
-     ],
-     "prompt_number": 30
+     "outputs": [],
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
