added plots of absorptivity integrand; started working on PL and thermal absorptivity calculators

--- a/jnu_calculator_power_law.ipynb
+++ b/jnu_calculator_power_law.ipynb
@@ -49,7 +49,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 1
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -176,7 +176,7 @@
       "    return j_nu\n",
       "\n",
       "#print nu / nu_c\n",
-      "n_summation(n_max)\n",
+      "#n_summation(n_max)\n",
       "\n",
       "#print gamma_integration_result(10)"
      ],
@@ -189,17 +189,9 @@
        "text": [
         "1.00199514442\n"
        ]
-      },
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 26,
-       "text": [
-        "8.819307930604603e-22"
-       ]
       }
      ],
-     "prompt_number": 26
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
