added adaptive power-law j_nu calculator

--- a/jnu_calculator_power_law.ipynb
+++ b/jnu_calculator_power_law.ipynb
@@ -49,7 +49,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 12
     },
     {
      "cell_type": "code",
@@ -81,7 +81,7 @@
       "\n",
       "#variables to be set (frequency, observer angle, width of delta function, electron number density, \n",
       "# sum index n)\n",
-      "nu = 1. * nu_c\n",
+      "nu = 10000000. * nu_c\n",
       "theta = np.pi/3.\n",
       "epsilon = 0.01\n",
       "n_e = 1.\n",
@@ -93,7 +93,7 @@
       "#eq. 67 gives location of peak for n integration for thermal; in\n",
       "#the n integration we integrate from end of sum (n_max) to C * n_peak_67\n",
       "C = 10\n",
-      "n_peak_power_law = 50\n",
+      "n_peak_power_law = 1e10\n",
       "\n",
       "def K_s(gamma, n):\n",
       "    beta = np.sqrt(1. - 1./gamma**2.)\n",
@@ -119,7 +119,7 @@
       "    return 1./norm\n",
       "\n",
       "normalization = norm_power_law()\n",
-      "print normalization\n",
+      "#print normalization\n",
       "\n",
       "def power_law_f(gamma):\n",
       "    beta = np.sqrt(1. - 1./gamma**2.)\n",
@@ -176,7 +176,7 @@
       "    return j_nu\n",
       "\n",
       "#print nu / nu_c\n",
-      "#n_summation(n_max)\n",
+      "n_summation(n_max)\n",
       "\n",
       "#print gamma_integration_result(10)"
      ],
@@ -185,13 +185,27 @@
      "outputs": [
       {
        "output_type": "stream",
-       "stream": "stdout",
+       "stream": "stderr",
        "text": [
-        "1.00199514442\n"
+        "/usr/lib/python2.7/dist-packages/scipy/integrate/quadpack.py:295: UserWarning: The maximum number of subdivisions (50) has been achieved.\n",
+        "  If increasing the limit yields no improvement it is advised to analyze \n",
+        "  the integrand in order to determine the difficulties.  If the position of a \n",
+        "  local difficulty can be determined (singularity, discontinuity) one will \n",
+        "  probably gain from splitting up the interval and calling the integrator \n",
+        "  on the subranges.  Perhaps a special-purpose integrator should be used.\n",
+        "  warnings.warn(msg)\n"
+       ]
+      },
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 13,
+       "text": [
+        "3.5640250489365477e-56"
        ]
       }
      ],
-     "prompt_number": 3
+     "prompt_number": 13
     },
     {
      "cell_type": "code",
@@ -239,9 +253,9 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 25,
+       "prompt_number": 9,
        "text": [
-        "[<matplotlib.lines.Line2D at 0x7fc70f89ac10>]"
+        "[<matplotlib.lines.Line2D at 0x7fabaa947450>]"
        ]
       },
       {
@@ -249,11 +263,11 @@
        "output_type": "display_data",
        "png": "iVBORw0KGgoAAAANSUhEUgAAAtMAAAHfCAYAAACS3lTXAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAIABJREFUeJzt3XuYVXW9P/DPHmaYAUEGERAFU1NBFAEtO2nqHENTyzSP\ndjQLNG95Q6T8aV7p6VhHH49lalLUo5VYIWKmkp1MhzxFJXKRoLxkBBQ3qVEuXpBZvz8mduy4zJ7F\nDHsteb2eZz97r73W2uuzfb5t3376zncVkiRJAgAAaLOqShcAAAB5JUwDAEBKwjQAAKQkTAMAQErC\nNAAApCRMAwBASsI0AACkVJEwvWLFijj33HOjqqqq+Jg2bVolStmsb33rW/HpT386hg0bFrvvvnvU\n1dVF9+7dY/DgwXHhhRfGnDlzNjnnjTfeiLvuuivOOuusGDJkSOy2225RW1sbO++8cwwbNizGjh0b\nL7/8cgW+DQAAHaWwPW/a0tzcHHfffXdcd911sXr16li/fn1LEYVCPPXUU3HUUUdtr1K2qqqq5b8x\nxo4dG2eeeWa89tpr8dWvfjUeeeSR4v5bb701xowZUzxnwYIFsc8++0Tnzp3jhhtuiBNPPDGWLVsW\nX/jCF+LXv/51RETU1tbGd7/73Tj99NO3/5cCAKDdbdcwfe2118Ydd9wR119/fTQ1NcWXv/zl4r7G\nxsZMhemRI0fGvffeW3wvSZIYPHhwPP/888VjnnnmmRg+fHhE/DNM33DDDTFu3LjieWvWrIl3vetd\n8be//S0iIrp06RIvvfRS9OvXb7t9HwAAOsZ2neZxxBFHxPPPPx9XXnll1NTUbM9Lt8kee+wR55xz\nTsl7hUIhPv7xjxe3m5ubY/LkycXt6urq6N+/f3zqU58qOW+nnXaKD3/4w8Xt119/PR599NEOqhwA\ngO1pu4bpE088sc0d2fXr18e3vvWtOProo6NXr15RW1sbe+65Z4waNSr+8Ic/dEidixYtiqOPPnqT\n9/+19tdee634un///rFw4cJ497vf3abzAADIr0yv5vHmm2/GCSecEBdccEE8/fTTcfnll8fTTz8d\n/fv3j+9973tx6KGHxs9//vPtVs+yZctKtgcNGtSh5wEAkG2ZDtM33nhjPPHEExERse+++8YNN9wQ\nhx12WPz3f/93RLRMmTjrrLNi7dq126We3/72t8XXPXv23GRKRznn7bfffnHCCSe0e20AAGx/1ZUu\nYEvefvvtuPvuu4vbBx100GZfL1++PCZPnhwjR44snvfSSy+16Vq777577Lzzzls9Zu7cufGTn/wk\nIiLq6urivvvua/WciIhHH300fv/730dESwD//ve/X1wtBACAfMtsmH7++edj1apVxe3u3bsXX/9r\niP3lL39ZDNOLFy+OwYMHt+laEyZMiHPPPXeL+1euXBlnnnlmRLQE70mTJsXhhx/e6uf+6U9/igsu\nuCAiWqZ2TJkyxRQPAIB3kDa1SJ977rm44IILYv/994/u3btHt27dYu+9945jjz02rrrqqlizZk27\nFdbU1FSyPXHixOjSpUt06dIlunfvHoVCISJaVtn461//usn5hUKhTY8t+dOf/hRHH310zJ8/P844\n44yYO3duWUF61qxZceSRR8by5cvjsssui5kzZwrSAADvMGV3pm+++ea45pprIkmSuPzyy+OMM86I\nnXbaKf7v//4vPv/5z8fPf/7zuPzyy2OnnXZql8Lq6+tLtk866aS4+eabN3ts165di6/32muvaG5u\nbpcaHn744fj0pz8dtbW1MWXKlDjllFOK+372s59F9+7d49/+7d82Oe+b3/xmjBkzJgYMGBCNjY3x\ngQ98oLjvRz/6Ubz73e+OIUOGtEuNAABUTllheuLEifH5z38+IiIuv/zy+MpXvlLcd9BBB0Xv3r1L\n1mBuDwMHDoxu3brF6tWrI6Lldt37779/yTFr1qyJhx56KA455JB2vfbatWtj7Nix8c1vfjM+9alP\nxe23375JuL/pppti7733LgnTr7zySlxwwQXx4x//OMaMGRP/9V//FXV1dSXnjRkzJs455xxhGgDg\nHaDVML1u3br43Oc+FxEtUycuuuiiTY459dRTY8mSJdG7d+/2K6y6Os4555y44447IiLi17/+daxd\nu7akC33ffffFRRddFM8991y7XffVV1+Nww47LF588cUYMGBANDc3x6WXXrrJcX/4wx9in332KW6/\n/PLL8YEPfCCWLl0aBxxwQCxbtizOO++8Tc5buXLlVqeVAACQH62G6Z/+9KfFdZK7dOmySXc4oiVk\n9+nTp9WLrVq1KubNmxcRLX8ouLF58+ZF586do7a2tniL7i996Uvx29/+Nn7zm9/Eq6++GieeeGJc\nf/310atXr5g2bVpcd911ceWVV5as7rGt/v73v8eLL74YES03b5k4cWJZ5y1cuDCWLl0aERG///3v\niyt4AADwztVqmP7Vr35VfF1fXx8TJ06MCRMmxO9+97tobm6OgQMHxsiRI+Mzn/lMqx3XZ599No45\n5pji9sbHX3LJJRHRMuf55ZdfjoiWW3FPmzYtxo8fHz/4wQ9i9uzZ8eEPfzj69OkTBx10UHznO9+J\nU089tW3fuExt7R5v/AeRAADsGApJkiRbO+DjH/94TJ48ubjds2fP+Pa3vx319fVx6aWXxvz58yMi\n4rTTTotJkyZ1bLUAAJAhrXamX3311ZLtK6+8sriqxVe+8pX40Ic+FBERkydPju9///vF9Zg3p6Gh\nYRtKBQCA8jQ2Nm6X67Qapv912sLGK2dsmNu8wdbCdENDQ/zmN7+Jvn37bvFa9fX1m6yaAdtLU1OT\n8UcmGZtkmfFJpTQ1NW1yX5INli5dGvvuu2+b74qdRqthepdddinZ7tmz52ZfR0T88Y9/3Opn9e3b\nNxYsWNCG8mD7GTduXIwbN67SZcAmjE2yzPgkixoaGrZb5mz1DohDhw4t+8OqqzN7d3IAAGh3rYbp\nk046qWT773//+2ZfR0QccMAB7VQWAABkX6thevDgwSW30Z45c2bx9axZs4qvC4VCjBo1qp3LAwCA\n7CprXsaECRNi4cKFMXPmzLj11lvjwAMPjPr6+hg7dmxEtATpMWPGxAknnNChxQIAQJaUFaZ79eoV\nv/rVr2L8+PExadKkGDlyZKxZsyZ23XXXOOmkk+Izn/mMIA0AwA6n7L8Y7Ny5c4wePTpGjx7dkfUA\nAEButDpnuj1Zh5Isc1MhssrYJMuMT7Jqe+VOYRr+wb8QyCpjkywzPsmqd2SYBgCAdxJhGgAAUhKm\nAQAgJWEaAABSEqYBACAlYRoAAFISpgEAICVhGgAAUhKmAQAgJWEaAABSEqYBACAlYRoAAFISpgEA\nICVhGgAAUhKmAQAgJWEaAABSEqYBACAlYRoAAFISpgEAICVhGgAAUhKmAQAgJWEaAABSEqYBACAl\nYRoAAFISpgEAICVhGgAAUhKmAQAgJWEaAABSEqYBACAlYRoAAFISpgEAICVhGgAAUhKmAQAgJWEa\nAABSEqYBACAlYRoAAFKqWJh+7rmIv/ylUlcHAIBtV7Ew/f73R3z1q5W6OgAAbLuKhenq6oh16yp1\ndQAA2HYVDdNvv12pqwMAwLarWJiuqRGmAQDIN51pAABISZgGAICUhGkAAEhJmAYAgJSEaQAASMk6\n0wAAkJLONAAApGSdaQAASElnGgAAUhKmAQAgJWEaAABSKjtMn3322VFVVbXVx7Rp08q+sDANAEDe\ntVtnulAoRKFQKPt4YRoAgLyrbsvBvXr1it69e29xf9euXcu/sHWmAQDIubLDdKFQiMsuuyxuuOGG\n9rmwzjQAADnXpmkeSZK024WtMw0AQN61KUyvXLkyrr322hg+fHjssssu0a9fvxgxYkSMHz8+1rVx\nzobONAAAedemMH3PPfdEnz594t57740JEyZEt27d4sknn4yLL7443ve+98Urr7xS9mcJ0wAA5F3Z\nc6ZHjRoVl112WRxyyCERETF06NAYOnRoDBw4MJIkidmzZ8fIkSNj6tSp5V1YmAYAIOcKyTZOhH7f\n+94XzzzzTHH7hRdeiH333XeT4xoaGqKpqSlOOeWUiIh47LGI+fMjrryy9JiGhoZtKQcAgB1AY2Nj\nNDY2bnbfvffeG/X19TF79uwOr6NNS+NtTv/+/UvC9Ny5czcbpiMi6uvrY9y4cRER8be/RfzxjxH/\n2AQAgLJtrQm7pZDdEdr9duLlNrpN8wAAIO/KCtMTJ06MAQMGbHbfokWLiq8LhUIMHjy4rAu7aQsA\nAHlXVphet25d/OUvf4m5c+eWvP/CCy/EjBkzittHHnlkDBo0qKwLW2caAIC8KytMFwqFiIg4/fTT\nY/LkyfHcc8/Fgw8+GCeccELxmIEDB8bEiRPLvvCGaR7teB8YAADYrsr6A8Tjjz8+7rjjjmhsbIzr\nr78+VqxYEa+++mr06NEjjjzyyDj11FPjwgsvjLq6uvIv/I8rNzdHdOqUqnYAAKiossJ0375945JL\nLolLLrmk/S78jyu//bYwDQBAPrX7ah7l2jhMAwBAHgnTAACQkjANAAApVTxMW2saAIC8qniY1pkG\nACCvKhama2panoVpAADySmcaAABSEqYBACAlYRoAAFISpgEAICVhGgAAUqp4mLbONAAAeVXxMK0z\nDQBAXllnGgAAUtKZBgCAlIRpAABISZgGAICUhGkAAEhJmAYAgJQqHqatMw0AQF5VPEzrTAMAkFfW\nmQYAgJR0pgEAICVhGgAAUhKmAQAgJWEaAABSEqYBACCliodp60wDAJBXFQ/TOtMAAORVxcJ0VVXL\nQ5gGACCvKhamI1q608I0AAB5JUwDAEBKwjQAAKQkTAMAQErCNAAApFTxMG2daQAA8qriYVpnGgCA\nvKpomK6pEaYBAMgvnWkAAEhJmAYAgJSEaQAASEmYBgCAlIRpAABISZgGAICUKh6m3bQFAIC8qniY\n1pkGACCv3LQFAABS0pkGAICUhGkAAEhJmAYAgJSEaQAASEmYBgCAlCoepq0zDQBAXlU8TOtMAwCQ\nV6nC9Pjx46Oqqqr4OOecc1Jd3DrTAADkWZvD9MqVK+Paa68tea9QKKS6uM40AAB51uYwfd1118Wq\nVava5eLCNAAAedamMD1r1qyYMGFCjB49ul0uLkwDAJBnZYfpJEni0ksvjQMPPDAuuuiidrm4MA0A\nQJ5Vl3vg9773vZg+fXo8+eST0alTp/a5uDANAECOldWZfu211+Kqq66K008/PRoaGtrt4tXVEUkS\nsX59u30kAABsN2WF6XHjxsWqVavif/7nf9r14tX/6IvrTgMAkEetTvOYP39+3HnnnXHDDTdE//79\nIyL9UnhNTU0xbty44vYvf9ny/IUvRHTuHNHQ0NCunW8AAN6ZGhsbo7GxcbP7FixYEPX19duljlbD\n9OjRo2PAgAFx5ZVXFt9LkqTkmH/d3pL6+vqSMP2Vr0Q88UTEVVdF9OhRZsUAAOzwttaE3VLI7ghb\nneaxcOHCePLJJ2PRokVRX18fXbp0iS5dusSgQYNKjvve975X3Ldo0aKyL26aBwAAebbVzvTuu+8e\nf/jDHzZ5f/HixTFixIji9sknnxxf/vKXIyKiX79+5V9cmAYAIMe2Gqarq6tj//333+T9zp07l2z3\n6NFjs8e1enFhGgCAHCt7nemIiFWrVsW8efNiyZIlJe8vX748fv3rX8fOO+8cgwcPLv/iwjQAADnW\npjD97LPPxjHHHBMRpSt6TJ06NaZOnRoNDQ3x5JNPln/xf1x93bq2VAEAANnQpjDd0NAQzc3N7Xdx\nnWkAAHKsrJu2dJSampZnYRoAgDyqaJjWmQYAIM+EaQAASEmYBgCAlIRpAABISZgGAICUMhGmrTMN\nAEAeZSJM60wDAJBH1pkGAICUdKYBACAlYRoAAFISpgEAICVhGgAAUhKmAQAgJWEaAABSykSYdtMW\nAADyKBNhWmcaAIA8ctMWAABISWcaAABSEqYBACAlYRoAAFKqaJiuqoooFIRpAADyqaJhOqKlOy1M\nAwCQR5kI09aZBgAgjzIRpnWmAQDIo4qH6ZoaYRoAgHyqeJjWmQYAIK+EaQAASEmYBgCAlIRpAABI\nSZgGAICUMhGmrTMNAEAeZSJM60wDAJBHFQ/T1pkGACCvKh6mdaYBAMgrYRoAAFISpgEAICVhGgAA\nUhKmAQAgpUyEaetMAwCQR5kI0zrTAADkUcXDtHWmAQDIq4qHaZ1pAADySpgGAICUhGkAAEhJmAYA\ngJSEaQAASCkTYdo60wAA5FEmwrTONAAAeVTxMG2daQAA8qriYVpnGgCAvBKmAQAgpUyE6SSJaG6u\ndCUAANA2rYbppUuXxpe//OX42Mc+FoMGDYrevXtH586do3v37jFkyJC47LLL4oUXXkhdQHV1y7Pu\nNAAAedNqmJ4xY0Zce+21MW/evLjpppuisbExJk+eHPvss0/Mmzcv7rrrrhg2bFj87//+b6oChGkA\nAPKqutwDH3zwwRgyZEhERBx44IExbNiw2GuvvSIi4o033ojPfvazMXfu3LYXIEwDAJBTrXamDzzw\nwLjzzjuLQXqDPffcM3r16lXcXrBgQaoCNoRpN24BACBvWg3Te++9d1x88cWbvL9y5cpYuXJlcXvY\nsGGpCqipaXnWmQYAIG/avJrH+vXrY968eXHGGWcU3xswYEDcddddqQowzQMAgLwqe850RMQvfvGL\n+Pd///dIkiQiIqqqquLcc8+Nm2++Oerr69MVIEwDAJBTbepMv/e9743Zs2fHxIkT44ADDojm5uaY\nMGFCHHzwwfGLX/wiVQHCNAAAedWmMN2lS5cYMmRInHnmmfGb3/wmdtttt4iIWLx4cXz0ox+NZcuW\ntbkAYRoAgLxq0zSPjXXr1i1GjhwZt9xyS0REvPbaa3H//ffHFVdcscVzmpqaYty4cSXvzZvX8nz7\n7REf/3hDNDQ0pC0JAIAdRGNjYzQ2Nm5234IFC1JPQW6rVsP0mjVrolAoRNeuXTfZ9653vatk++WX\nX97qZ9XX128Sph96KGLy5IgLL4wYOrSMigEA2OE1NGy5CbulkN0RWp3mcckll8SnPvWpze5bsmRJ\nyXaPHj3aXIB1pgEAyKuy5kw/+eSTm8yHfvPNN+P+++8vbnfq1ClOO+20NhdgzjQAAHnVapguFArx\n6quvxogRI2LKlCnx3HPPxSOPPBINDQ3FaR2dOnWK2267LdWNW9y0BQCAvGp1zvTYsWNjv/32i1/+\n8pdx1VVXxSuvvBKrV6+Obt26xbBhw+Koo46KCy64IAYPHpyuAJ1pAAByqtUwPWTIkBgyZEjHFSBM\nAwCQU22+nXh7E6YBAMgrYRoAAFISpgEAIKXMhGnrTAMAkDeZCdM60wAA5E3Fw7R1pgEAyKuKh2md\naQAA8kqYBgCAlIRpAABISZgGAICUhGkAAEgpM2HaOtMAAORNZsK0zjQAAHlT8TBtnWkAAPKq4mG6\nqiqiUBCmAQDIn4qH6YiWqR7CNAAAeSNMAwBASsI0AACkJEwDAEBKmQnT1pkGACBvMhOmdaYBAMib\nTITpmhphGgCA/MlEmNaZBgAgj4RpAABISZgGAICUhGkAAEhJmAYAgJQyE6atMw0AQN5kJkzrTAMA\nkDeZCNPWmQYAII8yEaZ1pgEAyCNhGgAAUhKmAQAgJWEaAABSEqYBACAlYRoAAFLKTJh20xYAAPIm\nM2FaZxoAgLzJRJiuqdGZBgAgfzIRpmtrI958s9JVAABA2wjTAACQkjANAAApZSJM19W1/AHi+vWV\nrgQAAMqXiTBdW9vyrDsNAECeCNMAAJCSMA0AACllIkzX1bU8v/FGZesAAIC2yESY1pkGACCPhGkA\nAEgpE2HaNA8AAPIoE2FaZxoAgDwSpgEAICVhGgAAUspEmDZnGgCAPKou56B58+bFpEmTYvr06fGn\nP/0pVqxYEa+//nrU19fHQQcdFP/xH/8R5513XnTu3DlVETrTAADkUVmd6QceeCC++MUvxsKFC+OW\nW26JX/ziF3HHHXfEm2++GU899VRceumlccghh8SSJUtSFSFMAwCQR2V1piMiqqur49FHH4199903\nIiIOPvjg6N69e5x11lkRETF//vy4+OKL46GHHmpzEaZ5AACQR2V1pnv06BEnnHBCMUhvcPrpp0eh\nUChuP/roo/FmivayzjQAAHlUVpi+4oor4uGHH97k/erq6ujdu3dxu7m5OVavXt3mIoRpAADyaJtW\n83j77bdj5cqVxe1ddtklevXq1ebPEaYBAMijbQrTs2bNivXr1xe3R48enepzOnWKqK42ZxoAgHzZ\npjB98803F1+PGDEirr766tSfVVurMw0AQL6UvZrHvxo/fnxMmTIlCoVCnHfeeXHnnXdGTU3NVs9p\namqKcePGbXbf+vURL7/cEBENaUsCAGAH0djYGI2NjZvdt2DBgqivr98udRSSJEnaetItt9wSV199\ndfTt2zfuvvvuOOWUU1o9p6GhISJii196jz0iTjgh4lvfams1AADwT63lzvbUpmkeTU1Ncfrpp8fV\nV18dn/jEJ2L+/PnFIL18+fK47777Yu3atakKMc0DAIC8KTtMNzY2xsEHHxzTp0+Phx9+OO67777o\n2bNncf/8+fNj5MiR8corr6QqRJgGACBvypozfdddd8Xo0aMjSZI48cQTY9KkSfHDH/6w5Jhly5Zt\nUyF1dcI0AAD5UlaYfuaZZ2LD1OqpU6d2SCG1tZbGAwAgX8oK0xtuGb7xrcPbm2keAADkTVlzpu+5\n555obm6O9evXt/rYc889UxUiTAMAkDfbdNOW9lRXZ5oHAAD5kpkwrTMNAEDeCNMAAJBSZsK0pfEA\nAMibzIRpS+MBAJA3mQrTOtMAAOSJMA0AACllJkzX1UWsWxfR3FzpSgAAoDyZCdO1tS3PutMAAOSF\nMA0AACllJkzX1bU8C9MAAORFZsL0hs605fEAAMiLzIVpnWkAAPJCmAYAgJQyE6Y3zJk2zQMAgLzI\nTJjWmQYAIG+EaQAASCkzYdrSeAAA5E1mwrSl8QAAyJvMhWmdaQAA8kKYBgCAlDITpi2NBwBA3mQm\nTOtMAwCQN8I0AACkJEwDAEBKmQnT1dURnTqZMw0AQH5kJkxHtHSndaYBAMiLTIXpujphGgCA/MhU\nmK6tNc0DAID8yFyY1pkGACAvhGkAAEgpU2HanGkAAPIkU2HanGkAAPIkc2FaZxoAgLzIVJg2zQMA\ngDzJVJg2zQMAgDzJXJjWmQYAIC+EaQAASClTYdqcaQAA8iRTYdqcaQAA8iRzYVpnGgCAvMhUmDbN\nAwCAPMlUmK6tjXjrrYjm5kpXAgAArctcmI5oCdQAAJB1mQzTpnoAAJAHmQrTdXUtz8I0AAB5kKkw\nvaEzbXk8AADyIJNhWmcaAIA8yFSYNs0DAIA8yVSYNs0DAIA8yWSY1pkGACAPhGkAAEgpU2HanGkA\nAPIkU2HanGkAAPKkzWF6xYoVce6550ZVVVXxMW3atHYpxjQPAADypOww3dzcHHfddVfsv//+8d3v\nfrf4fqFQiEKh0C7FmOYBAECelB2mr7/++vj85z8f11xzTfy///f/iu8nSdJuxZjmAQBAnpQdpo84\n4oh4/vnn48orr4yampoOKcY0DwAA8qS63ANPPPHEjqwjIkzzAAAgXzK5mocwDQBAHmQqTFdXR1RV\nmTMNAEA+ZCpMR7R0p3WmAQDIg7LnTLeHpqamGDdu3Bb3NzQ0RF1dgzANAMBWNTY2RmNj42b3LViw\nIOrr67dLHds1TNfX1281TEe0dKZN8wAAYGsaGhqioaFhs/u2FLI7gmkeAACQUubCdF2dMA0AQD5k\nLkzrTAMAkBdlz5letWpVzJs3LyIiFi9eXLJv3rx50blz56itrY3hw4dvU0HmTAMAkBdlh+lnn302\njjnmmOJ2oVAovr7kkksiImKvvfaKl19+eZsK0pkGACAvyg7TDQ0N0dzc3JG1RETLnOm1azv8MgAA\nsM0yOWfaNA8AAPIgk2HaNA8AAPIgc2Ha0ngAAORF5sK0zjQAAHmRyTBtzjQAAHmQyTCtMw0AQB5k\nLkybMw0AQF5kLkxv6EwnSaUrAQCArctkmI6IeOutytYBAACtyVyYrqtreTbVAwCArMtcmN7QmRam\nAQDIusyGacvjAQCQdZkN0zrTAABkXebCtDnTAADkRebCtGkeAADkRWbDtM40AABZl7kw3aNHy/Pf\n/lbZOgAAoDWZC9N77tnyvGhRZesAAIDWZC5M77ZbRE2NMA0AQPZlLkxXVUXssUfEwoWVrgQAALYu\nc2E6omWqhzANAEDWCdMAAJBSZsP0X/4SsX59pSsBAIAty2SYHjAg4u23I5YurXQlAACwZZkM0xuW\nxzPVAwCALMt0mLY8HgAAWZbJMD1gQMuzzjQAAFmWyTDdo0fEzjsL0wAAZFsmw3REy1QP0zwAAMiy\nzIbpAQN0pgEAyLbMhmk3bgEAIOsyHaZfeSVi7dpKVwIAAJuX2TC9YUWPxYsrWwcAAGxJZsO0G7cA\nAJB1wjQAAKSU2TC9xx4RhYLl8QAAyK7MhunOnSN2201nGgCA7MpsmI6wPB4AANmW+TBtmgcAAFmV\n6TC94S6ISVLpSgAAYFOZDtN77hnx+usRK1dWuhIAANhU5sN0hHnTAABkU6bD9Ia7IJo3DQBAFmU6\nTOtMAwCQZZkO0717R9TWRixYUOlKAABgU5kO04VCxHveE/H441b0AAAgezIdpiMiPvnJiPnzI+bM\nqXQlAABQKvNh+vTTI2pqIu67r9KVAABAqcyH6V69Ik48MeL++yPWr690NQAA8E+ZD9MRLVM9liyJ\neOqpSlcCAAD/lIsw/ZGPROy8s6keAABkSy7CdF1dy9zpBx+MWLu20tUAAECLXITpiJapHqtXR/z4\nx5WuBAAAWuQmTB91VMvtxb/73UpXAgAALcoO00uXLo0rrrgiBg4cGF27do36+vo47LDD4rbbbou3\n3nqrrM9oampKX2hVxLnnRvzkJxHjx6f+GNiixsbGSpcAm2VskmXGJ1m1LbmzLcoK088++2wMHjw4\nbr/99uhLxRwVAAANrUlEQVTdu3c8/fTT8YMf/CD+/Oc/x+c+97l4//vfH3/7299a/Zxt/VLXXhtx\n0kkRF18cMXnyNn0UbMK/EMgqY5MsMz7JqsyE6dWrV8fHPvaxaGpqikKhELfeemsceuihcfzxx8fl\nl18eERGzZs2K888/v8OLra6O+MEPIg4/POKssyKefLLDLwkAAFvUapieMGFCLF68uLg9dOjQ4ush\nQ4YUXz/00EMxZzvc87tr14hHHonYf/+Ik09umfLx5psdflkAANhEq2F68kbzKXbaaafo0qVLcXu3\n3XYrOfaBBx5ox9K2rGfPiMcfjxg6NOKiiyL2268lVL/xxna5PAAAREQrYbq5uTlmzZpV3O7evXvJ\n/m7dupVsz5w5sx1L27o99oh4+umIn/605fVFF7WE7A9+MOKmmyKmTWu5a2KSbLeSAADYwVRvbWdT\nU1O8sVG7t6ampmT/v24vWbKkHUtrXaEQcdxxEcce23Kr8UceaZlHfd11/zyma9eIffaJ6N07Ypdd\nWgL3xo8ePSJqayM6d976o6amZUWRQmHbnzc8AADIt62G6bX/crvBqqrSRnanTp1KttesWbPViy1d\nujQaGhraUF7b9ezZ8geKq1ZFvP56y2PJkoiFCyPefrvlsW7djtmx3t4BPm//wZAkC+KLX2ysdBmw\nCWOTLDM+yaLm5tnxrnfVb5drbTVMbzw/OqJl2sfG1q9fX7K90047bfGzGhsbY999940FCxZs8Zj6\n+vqor9/2L15T09KFhrZoaqqPdhh+0O6MTbLM+KRSmpqatrL8XX2MGTNmu9Sx1TDds2fPqKurK071\nWLduXcn+f93u16/fVi/20ksvpakRAAAyaat/gFhVVRXDhw8vbq9atapk/+rVq0u2Dz300HYsDQAA\nsq3VpfFOO+204us1a9aU/EHismXLiq8LhULJsQAA8E7Xapg+//zzY4899oiIiCRJSm7MMnfu3OLr\nk08+ueSGLgAA8E5XSJLW17V45pln4kMf+lA0NTXF4YcfHrfffnu88sorMWrUqFi+fHkMGzYsnnji\nidjFX/0BALADKStMR7Qsa3fzzTfH1KlTY9GiRVFdXR2DBg2K//zP/4zLLrssOnfu3NG1AgBAppQd\npgEAgFKtzpkGAAA2T5gGAICUOjxML126NK644ooYOHBgdO3aNerr6+Owww6L2267Ld56662Ovjw7\nsLPPPjuqqqq2+pg2bdom57300ktx/vnnx9577x1dunSJXr16xdFHHx3f/va3w6wo2mrFihVx7rnn\ntjruNkg7/mbOnBmf+MQnon///lFXVxd9+vSJ448/PqZMmdIRX4t3iLaMz4aGhlZ/UxcuXLjZc41P\nyjFv3ry48cYb47jjjov99tsv6uvro7a2Nvr27Rsf/OAH4+tf//oWs2NFfzuTDjRjxoykZ8+eSaFQ\nSI444ohkxowZyU9+8pOkT58+SaFQSA455JBk5cqVHVkCO7BRo0YlhUJhi4+qqqpk2rRpJec89thj\nSV1dXVIoFJJTTjklmTNnTvLDH/4w6dq1a1IoFJLjjz8+eeONNyr0jciT9evXJ3feeWdSX1+fVFdX\nb3XcbZB2/E2YMCGpqqpKCoVCcuGFFya/+93vkrvvvrv43qc//emkubm5o78yOZJmfB599NGt/qb+\n+c9/3uQ845Ny3XjjjUmhUEgGDhyYTJkyJZkzZ07yjW98I+nRo0dxnB144IHJX//615LzKv3b2WFh\netWqVcmAAQOK/wObPn16cd9NN91U/Idy6qmndlQJ7OBGjRqV7LrrrskBBxywxcczzzxTPH7RokVJ\n9+7di2N2yZIlxX3nn39+ccyOHTu2El+HnLnmmmuS7t27J7fccktyzTXXlISOzYWVtONvxowZSadO\nnZJCoZDsvPPOybp164r7jj322OJ5X/va1zruy5I7bR2fSdISpvv167fZ39JBgwYlBxxwwCYhx/ik\nLW688cakpqYmefHFF0vev//++0vG6CmnnFLcl4Xfzg4L07fddlvJf62uXbu2uO/HP/5xyT+U2bNn\nd1QZ7MDOPvvs5Atf+ELZx48ePbo4Jvv06VOy72tf+1pxX+fOnZMVK1a0d7m8wzz22GPFYLGh27K1\nsJJ2/H30ox8t7jvssMNKzvvsZz9b8pkb/8uCHVtbx2eSJElDQ0Pyne98p03XMT5pi9tuuy356Ec/\nusn769atK3aLC4VCUl1dXew0Z+G3s8PmTE+ePLn4eqeddoouXboUt3fbbbeSYx944IGOKoMdXNKG\nOc4bj9m+ffuW7Nt4zK5bty5+9KMfbXtxvKOdeOKJ0a9fv7KPTzP+1q5dG1OnTt3ieRtvr1ixIhob\nG8uuh3e2to7PNIxP2uqKK66Ihx9+eJP3q6uro3fv3sXt5ubmWL16dURk47ezQ8J0c3NzzJo1q7jd\nvXv3kv3dunUr2Z45c2ZHlAGxcuXKuPbaa2P48OGxyy67RL9+/WLEiBExfvz4WLduXfG4pUuXxpIl\nS4rbxizbU1vH34bf1+eeey7Wr19f9nnGLdtq4cKFcemll8ZBBx0U9fX10b9///jIRz4S3//+9zc5\n1vikvbz99tuxcuXK4vYuu+wSvXr1ysxvZ4eE6aampnjjjTeK2zU1NSX7/3V7438Q0J7uueee6NOn\nT9x7770xYcKE6NatWzz55JNx8cUXx/ve97545ZVXIiLir3/9a8l5xizbU1vH34bjjVu2tzvvvDPe\n8573xMSJE+NrX/tarFu3LqZOnRpnnXVWfOhDHyr5d7/xSXuZNWtWSfgdPXp0RGTnt7N6q3tTWrt2\nbcl2VVVpZu/UqVPJ9po1azqiDHZwo0aNissuuywOOeSQiIgYOnRoDB06NAYOHBhJksTs2bNj5MiR\nMXXqVGOWiko7/oxbtqexY8fGoEGDYr/99ouIlt/U/v37x4gRIyIi4mc/+1mMHTs2vv71r0eE8Un7\nufnmm4uvR4wYEVdffXVEZOe3s0M60xvPj45omfaxsY3/6yKiZU41tLeGhoZikN5g3333jfe85z3F\n7ccffzxeeuklY5aKSjv+jFu2p5NOOqkYpDc45phjok+fPsXte+65pxhUjE/aw/jx42PKlClRKBTi\n/PPPj8cee6zYOc7Kb2eHhOmePXtGXV1dcXvjuamb2+7oP4KAjfXv379ke+7cubHHHnuUvGfMsj3t\nvvvuJdvljr+050F72vj386233ornn39+k/cjjE/a7pZbbomLL744+vbtGw8++GB84xvfKJmCkZXf\nzg4J01VVVTF8+PDi9qpVq0r2b/gLzA0OPfTQjigDypIkSey2224l/2MxZtme+vXrl2r8DR06NKqr\nq9t8HnSUpGXJ3YiIOPjgg41PUmlqaorTTz89rr766vjEJz4R8+fPj1NOOSUiIpYvXx733XdfrF27\nNjO/nR22NN5pp51WfL1mzZqSP0pYtmxZ8XWhUCg5FtrDxIkTY8CAAZvdt2jRouLrQqEQgwcPjojS\nMbt8+fKSczYeszU1NXHyySe3Z7mQavx17do1TjjhhLLO6927dzQ0NLRnyexAvvSlL8URRxyx2X2L\nFy8uvu7cuXNxKojxSRqNjY1x8MEHx/Tp0+Phhx+O++67L3r27FncP3/+/Bg5cmRxAYEs/HZ2WJg+\n//zzi/8XT5IkMWfOnOK+uXPnFl+ffPLJMXTo0I4qgx3UunXr4i9/+UvJWIuIeOGFF2LGjBnF7SOP\nPDIGDRoUERGf+9znisvhLF++PJYuXVo8buPPueSSS2LXXXftyPLZAaUdfzfccEPxj2fmz58fb7/9\n9mbPu/baazf5oxoo11tvvRWzZ8/eJHQ88cQTsWLFiuL2GWecUbLMmPFJW9x1113xwQ9+MBYvXhzD\nhg2LSZMmxSc/+cmSx0033VRyTiZ+O9t+f5ry/fa3v0169uyZFAqF5IgjjkhmzJiRPP7440nfvn2T\nQqGQDB8+PFm5cmVHlsAO6t57700KhUIycODA5IEHHkjmzJmTTJ48Odlnn32KdzUaNGhQsnjx4pLz\nHnnkkaSuri4pFArJxz72sWT27NnJpEmTkq5duyaFQiE57rjjinddgq157bXXkunTpyfTp09Pzj33\n3JI7zH39619Ppk+fnsycObPknLTjb/z48cW7g33mM59J5s6dm4wfPz7p1KlTUlVVlYwaNWo7fWvy\noq3jc9y4ccU7xT322GPJnDlzku985zvJrrvuWjzv8MMPT1577bVNrmV8Uq5Ro0aVjMWtPf785z8X\nz6v0b2eHhukkSZIlS5YkY8aMSfbff/+kS5cuSffu3ZP3vve9ya233pq8+eabHX15dlBLly5N7rzz\nzuS0005LBg0alPTq1Suprq5OevXqlRx11FHJV7/61eT111/f7Lkvvvhict555yV77bVXUltbm9TX\n1ydHHnlkMmHChKS5uXk7fxPy6qmnnir54a+qqio+Nry39957b3Je2vE3Y8aM5Mwzz0z22GOPpHPn\nzsmuu+6aHHfcccnkyZM78muSU20dny+//HJy6623JieddFKy3377JfX19UlNTU3Sp0+f5Nhjj02+\n/e1vJ+vXr9/i9YxPynH22WdvMh639Ng4TCdJZX87C0nShvstAwAARR02ZxoAAN7phGkAAEhJmAYA\ngJSEaQAASEmYBgCAlIRpAABISZgGAICUhGkAAEhJmAYAgJT+Px0UlctCJVTAAAAAAElFTkSuQmCC\n",
        "text": [
-        "<matplotlib.figure.Figure at 0x7fc70f9a0990>"
+        "<matplotlib.figure.Figure at 0x7fabaa845ed0>"
        ]
       }
      ],
-     "prompt_number": 25
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
